Don't enable the search panel per default

Assure that the search panel also stays disabled when updating
from an older Dolphin version.

BUG: 279348
FIXED-IN: 4.7.1